# mlops_exercises

./: README.md
mlops_exercises/: LICENSE  Makefile  README.md  pyproject.toml
mlops_exercises/dockerfiles/: predict_model.dockerfile  train_model.dockerfile
mlops_exercises/docs/: mkdocs.yaml
mlops_exercises/docs/source/: index.md
mlops_exercises/exercises/: __init__.py
